k8s/pizza-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   namespace: default
   name: pizza-email
   labels:
      app: pizza-email
spec:
   replicas: 1
   selector:
      matchLabels:
         app: pizza-email
   template:
      metadata:
         name: pizza-email
         labels:
            app: pizza-email
      spec:
         containers:
            - name: pizza-email
              image: diegoj4v/pizza-email:latest
              imagePullPolicy: Always
              lifecycle:
                 preStop:
                    exec:
                       command: ['sh', '-c', 'sleep 10']
              ports:
                 - containerPort: 80
              resources:
                 limits:
                    cpu: 200m
                    memory: 240Mi
                 requests:
                    cpu: 120m
                    memory: 100Mi
