k8s/pizza-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-client
  labels:
    app: pizza-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza-client
  template:
    metadata:
      name: pizza-client
      labels:
        app: pizza-client
    spec:
      containers:
        - name: pizza-client
          image: diegoj4v/pizza-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 240Mi 
            requests:
              cpu: 120m
              memory: 100Mi 
---

apiVersion: v1
kind: Service
metadata:
  name: pizza-client-svc
spec:
  selector:
    app: pizza-client
  ports:
    - port: 80
      targetPort: 80
