k8s/pizza-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-data
  labels:
    app: pizza-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza-data
  template:
    metadata:
      name: pizza-data
      labels:
        app: pizza-data
    spec:
      containers:
        - name: pizza-data
          image: diegoj4v/pizza-data:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 4436
              path: /data/actuator/health/readiness
            initialDelaySeconds: 30
            periodSeconds: 30
          livenessProbe:
            httpGet:
              port: 4436
              path: /data/actuator/health/liveness
            initialDelaySeconds: 30
            periodSeconds: 30
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          ports:
            - containerPort: 4436
---
apiVersion: v1
kind: Service
metadata:
  name: pizza-data-svc
spec:
  selector:
    app: pizza-data
  ports:
    - port: 4436
      targetPort: 4436
