k8s/pizza-ingredient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: pizza-ingredient
  labels:
    app: pizza-ingredient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza-ingredient
  template:
    metadata:
      name: pizza-ingredient
      labels:
        app: pizza-ingredient
    spec:
      containers:
        - name: pizza-ingredient
          image: diegoj4v/pizza-ingredient:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /ingredient/actuator/health/readiness
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 4
          livenessProbe:
            httpGet:
              port: 8080
              path: /ingredient/actuator/health/liveness
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 4
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 480Mi 
            requests:
              cpu: 200m
              memory: 480Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pizza-ingredient-svc
spec:
  selector:
    app: pizza-ingredient
  ports:
    - port: 80
      targetPort: 8080
