k8s/pizza-jwt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: pizza-jwt
  labels:
    app: pizza-jwt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza-jwt
  template:
    metadata:
      name: pizza-jwt
      labels:
        app: pizza-jwt
    spec:
      containers:
        - name: pizza-jwt
          image: diegoj4v/pizza-jwt:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 80
              path: /jwt/health/readiness
            #initialDelaySeconds: 30
            #periodSeconds: 30
          livenessProbe:
            httpGet:
              port: 80
              path: /jwt/health/liveness
            #initialDelaySeconds: 30
            #periodSeconds: 30
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pizza-jwt-svc
spec:
  selector:
    app: pizza-jwt
  ports:
    - port: 80
      targetPort: 80
