k8s/pizza-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-order
  labels:
    app: pizza-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza-order
  template:
    metadata:
      name: pizza-order
      labels:
        app: pizza-order
    spec:
      containers:
        - name: pizza-order
          image: diegoj4v/pizza-order:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /api/order/actuator/health/readiness
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 4
          livenessProbe:
            httpGet:
              port: 8080
              path: /api/order/actuator/health/liveness
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 4
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 480Mi 
            requests:
              cpu: 200m
              memory: 480Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pizza-order-svc
spec:
  selector:
    app: pizza-order
  ports:
    - port: 80
      targetPort: 8080
