k8s/pizza-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pizza-customer-route
spec:
  parentRefs:
    - name: pizza-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /customer
      backendRefs:
        - kind: Service
          name: pizza-customer-svc
          port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pizza-order-route
spec:
  parentRefs:
    - name: pizza-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /order
      backendRefs:
        - kind: Service
          name: pizza-order-svc
          port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pizza-ingredient-route
spec:
  parentRefs:
    - name: pizza-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ingredient
      backendRefs:
        - kind: Service
          name: pizza-ingredient-svc
          port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pizza-client-route
spec:
  parentRefs:
    - name: pizza-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /client
      backendRefs:
        - kind: Service
          name: pizza-client-svc
          port: 80
